Adds get product endpoint
